# Kronn

./: .gitattributes  .gitignore  .jscpd.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  PLAYWRIGHT_AUDIT_REVIEW.md  README.fr.md  README.md  SECURITY.md  THIRD_PARTY_SKILLS.md  VIBE.md  claude.txt  docker-compose.yml  docroms-card-expanded.md  kronn  package.json  pnpm-lock.yaml
backend/: Cargo.toml  Dockerfile  entrypoint.sh
backend/.cargo/: audit.toml
backend/docs/conventions/: agents-md-format-v1.md
backend/examples/: lint-no-raw-command.rs
backend/scripts/: disc-introspection-mcp.py  test_disc_introspection_mcp.py  vibe-runner.py
backend/scripts/ci/: lint_with_conn_unwrap.py  test_lint_with_conn_unwrap.py
backend/sidecars/docs/: README.md  build_bundle.py  bundle_entry.py  pyproject.toml  smoke_bundle.py  test_rendering.py
backend/sidecars/docs/hooks/: hook-PIL.py
backend/sidecars/docs/kronn_docs/: __init__.py  fonts.conf  html_to_docx.py  server.py
backend/src/: api_tests.rs  lib.rs  main.rs
backend/src/agents/: mod.rs  runner.rs  runner_test.rs
backend/src/api/: agent_api.rs  agents.rs  ai_docs.rs  api_call_logs.rs  audit.rs  bundle.rs  contacts.rs  debug.rs  directives.rs  disc_git.rs  disc_helpers.rs  disc_introspection.rs  disc_invite.rs  disc_prompts.rs  disc_source.rs  discover.rs  discussions.rs  docs.rs  federation.rs  git_ops.rs  learnings.rs  mcp_remote.rs  mcps.rs  mod.rs  ollama.rs  openapi.rs  profiles.rs  projects.rs  quick_apis.rs  quick_prompts.rs  rtk.rs  setup.rs  skills.rs  stats.rs  tasks.rs  themes.rs  usage.rs  user_context.rs  version.rs  workflows.rs  (+1 more)
backend/src/api/audit/: anti_hallu_enforce.rs  anti_hallu_step.rs  briefing.rs  drift.rs  full.rs  helpers.rs  info.rs  mod.rs  reconciliation.rs  redact_artifacts.rs  run.rs  validate.rs  validation.rs
backend/src/api/discussions/: context.rs  crud.rs  messaging.rs  mod.rs  orchestration.rs  runtime.rs  slash_markers.rs  streaming.rs
backend/src/api/projects/: anti_hallu_inject.rs  bootstrap.rs  clone.rs  crud.rs  git.rs  migrate.rs  mod.rs  template.rs
backend/src/core/: anti_halluc.rs  audit_detectors.rs  audit_mcp_filter.rs  backup.rs  checksums.rs  checksums_test.rs  cmd.rs  config.rs  context_files.rs  crypto.rs  crypto_test.rs  directives.rs  docs_migration.rs  docs_sidecar.rs  docs_write_filter.rs  env.rs  faithfulness.rs  fs_guard.rs  host_mcp_discovery.rs  key_discovery.rs  keystore.rs  keyvault.rs  kronn_state.rs  kronn_state_test.rs  learning_doc.rs  learning_gate.rs  learning_promote.rs  learning_scope.rs  learning_sweep.rs  legacy_docs.rs  log_buffer.rs  mcp_scanner.rs  mcp_scanner_test.rs  mod.rs  native_files.rs  net_expose.rs  oauth2_cache.rs  pricing.rs  profiles.rs  recovery.rs  (+18 more)
backend/src/db/: agent_decisions.rs  api_call_logs.rs  audit_runs.rs  contacts.rs  disc_source.rs  discussion_sessions.rs  discussions.rs  discussions_test.rs  learnings.rs  mcps.rs  migrations.rs  mod.rs  projects.rs  quick_apis.rs  quick_prompts.rs  tests.rs  workflows.rs
backend/src/db/sql/: 001_initial.sql  002_mcp_redesign.sql  003_workflows.sql  004_token_tracking.sql  005_discussion_archive.sql  006_discussion_skills.sql  007_project_skills.sql  008_discussions_index.sql  009_profiles.sql  010_directives.sql  011_multi_profiles.sql  012_mcp_general.sql  013_discussion_worktrees.sql  014_summary_cache.sql  015_model_tier.sql  016_message_model_tier.sql  017_message_count.sql  018_briefing_notes.sql  019_pin_first_message.sql  020_fix_worktree_paths.sql  021_message_identity.sql  022_contacts.sql  023_shared_discussions.sql  024_message_cost.sql  025_context_files.sql  026_quick_prompts.sql  (+51 more)
backend/src/directives/: caveman.md  code-only.md  diff-only.md  json-output.md  markdown-report.md  reply-in-english.md  repondre-en-francais.md  responder-en-espanol.md  step-by-step.md  token-saver.md  verbose.md
backend/src/models/: agent_decisions.rs  agents.rs  bundle.rs  db.rs  discussions.rs  git.rs  learnings.rs  mcp.rs  mod.rs  multiuser.rs  ollama.rs  projects.rs  quick.rs  setup.rs  stats.rs  tests.rs  workflows.rs
backend/src/profiles/: architect.md  batman.md  data-analyst.md  data-engineer.md  devils-advocate.md  entrepreneur.md  game-developer.md  mentor.md  product-owner.md  qa-engineer.md  scrum-master.md  seo-growth.md  sre.md  staff-engineer.md  tech-lead.md  technical-writer.md  translator.md  ux-designer.md
backend/src/scheduler/: mod.rs
backend/src/skills/: accessibility.md  api-design.md  bootstrap-architect.md  csharp.md  data-engineer.md  data-engineering.md  database.md  devils-advocate.md  devops-expert.md  devops.md  gdpr.md  go.md  green-it-expert.md  green-it.md  java.md  kotlin.md  kronn-doc-author.md  kronn-docs.md  mobile.md  php.md  product-owner.md  python.md  qa-engineer.md  qp-improver.md  rust-dev.md  rust.md  security-auditor.md  security.md  seo-expert.md  seo.md  structured-questions.md  swift.md  tech-lead.md  terraform.md  testing.md  token-saver.md  typescript-dev.md  typescript.md  web-performance.md  workflow-architect.md
backend/src/workflows/: api_call_executor.rs  api_call_ratelimit.rs  api_call_security.rs  api_call_step.rs  batch_apicall_step.rs  batch_step.rs  big_ticket_template.rs  exec_step.rs  gate_checkpoint.rs  gate_step.rs  json_data_step.rs  mod.rs  notify_step.rs  quick_api_hydrate.rs  quick_prompt_hydrate.rs  runner.rs  step_output_format.rs  steps.rs  sub_workflow_step.rs  template.rs  triage.rs  trigger.rs  workspace.rs
backend/tests/: anti_hallu_citation_forms.rs  anti_hallu_lang_claims.rs  anti_hallu_malformed_markers.rs  anti_hallu_multiroot_finalize.rs  anti_hallu_perf_caps.rs  anti_hallu_security_jail.rs  anti_hallu_tiers_and_counts.rs  anti_hallu_utf8_unicode.rs  anti_hallu_verify_outcomes.rs  api_tests.rs  config_write_guard.rs  learnings_api.rs  real_agent_e2e.rs
backend/tests/fixtures/: anti_halluc_corpus.jsonl
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
lib/: ui.sh  (+7 more)
(+772 files in other folders)
