[package]
name = "kronn"
version = "0.3.4"
edition = "2021"
description = "Self-hosted AI dev workflow control plane"
license = "AGPL-3.0-only"

[lib]
name = "kronn"
path = "src/lib.rs"

[[bin]]
name = "kronn"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync", "time", "io-util", "signal"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database (embedded)
rusqlite = { version = "0.31", features = ["bundled"] }

# Scheduling
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# File system
walkdir = "2"
open = "5"              # Open URLs in system browser

# Process management
which = "6"           # Find executables in PATH

# Async streams
futures = "0.3"
async-stream = "0.3"

# Crypto
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# HTTP client (for tracker APIs)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket client (for peer-to-peer connections between Kronn instances)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
async-trait = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex-lite = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"     # XDG paths

# Document extraction (context files: xlsx, docx, pptx, pdf)
calamine = "0.26"                                           # Excel spreadsheets
zip = { version = "2", default-features = false, features = ["deflate"] }  # Office XML (docx, pptx)
pdf-extract = "0.7"                                         # PDF text extraction

# TypeScript type generation
ts-rs = { version = "9", features = ["chrono-impl", "uuid-impl", "serde-json-impl"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = "3"
tempfile = "3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"

# ── Build profiles ───────────────────────────────────────────────────────────

[profile.dev]
# Compile deps with optimizations, keep local code in debug mode
# Dramatically speeds up runtime AND reduces dep recompilation on code changes
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Fast release build for local dev — `cargo build --profile fast`
# Same optimizations but skips LTO and uses more codegen units (4x faster)
[profile.fast]
inherits = "release"
lto = false
codegen-units = 16
