[package]
name = "kronn-desktop"
version = "0.5.0"
edition = "2021"
description = "Kronn Desktop — Self-hosted AI coding agent control plane"
license = "AGPL-3.0-only"

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Open URLs in system browser
open = "5"

# Embed the Kronn backend as a library
kronn = { path = "../../backend" }

# Async runtime (shared with backend)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "set-header"] }
anyhow = "1"

# Shared deps with backend
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embed frontend dist into binary (no filesystem dependency in production)
include_dir = "0.7"

# Serialization for Tauri commands
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
