[project]
name = "kronn-docs"
version = "0.1.0"
description = "Kronn document-generation sidecar: PDF / DOCX / XLSX / CSV / PPTX from HTML or structured JSON."
requires-python = ">=3.10"
dependencies = [
  # HTTP framework + runtime.
  "fastapi>=0.110,<0.120",
  "uvicorn[standard]>=0.29,<0.40",
  # PDF: HTML + CSS + Paged Media → PDF.
  "weasyprint>=62,<65",
  # DOCX: render the HTML with the PDF engine, then place each rendered page
  # in Word so browser-only layouts keep their visual appearance.
  "python-docx>=1.1,<2",
  "pypdfium2>=5.12,<6",
  "Pillow>=10,<13",
  # XLSX: pure-Python Excel writer (no libreoffice dep).
  "XlsxWriter>=3.2,<4",
  # PPTX: PowerPoint Open-XML generator.
  "python-pptx>=1.0,<2",
]

[project.optional-dependencies]
# Release-only toolchain. PyInstaller 6.16 added Python 3.14 support; keeping
# the upper bound below 7 avoids an unreviewed bundle-format jump.
bundle = [
  "pyinstaller>=6.16,<7",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kronn_docs"]

[tool.setuptools.package-data]
kronn_docs = ["fonts.conf"]
